Refactor: [req-0008] 학습 목록 서비스 구조 개선